--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.0",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
