--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.9.3",
@@ -24,6 +24,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.13.1",
     "lucide-react": "^0.263.0",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
