--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.13.1",
     "lucide-react": "^0.263.0",
+    "mysql2": "^3.5.2",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
