--- a/package.json
+++ b/package.json
@@ -19,21 +19,25 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.13.1",
+    "dotenv": "^16.3.1",
     "http": "^0.0.1-security",
     "lucide-react": "^0.263.0",
     "mysql2": "^3.5.2",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "18.2.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
